--- a/view/user/dashboard.ejs
+++ b/view/user/dashboard.ejs
@@ -224,7 +224,7 @@
                                 <i class="fas fa-headset card-icon support-icon"></i>
                                 <h5 class="fw-bold mb-3">Change Password</h5>
                                 <p class="text-muted">Changing The Password And Input strong For More Secure.</p>
-                                <a href="/user/changeAccount" class="btn btn-warning mt-2">Change Password</a>
+                                <a href="/user/changePassword" class="btn btn-warning mt-2">Change Password</a>
                             </div>
                         </div>
                     </div>
